--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="flex">
-                    <hr class="hr">OR<hr class="hr">
+                    <hr style="width: 120px; margin-right: 5px;">OR<hr style="width: 120px; margin-left: 5px;">
                 </li>
             </ul>
             <form action="#" method="post">
